--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/cyanoTRACKER.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
@@ -27,6 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>CyanoTRACKER</title>
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
