--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
 
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
       content="CyanoTRACKER"
@@ -27,6 +29,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgiUhW1W2hnJACseQJKNVXIhyoS2dyTq4&libraries=places"></script>
+
     <title>CyanoTRACKER</title>
    
   </head>
